fixed spacing with about us container objects

--- a/react-app/src/components/Footer/Footer.module.css
+++ b/react-app/src/components/Footer/Footer.module.css
@@ -53,7 +53,7 @@
     display: flex;
     justify-content: space-between;
     width: fit-content;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .footerAboutUsContainer {
